syntax = "proto3";

import "bscp.io/pkg/protocol/core/base/base.proto";

package pbci;

option go_package = "bscp.io/pkg/protocol/core/config-item;pbci";

// ConfigItem source resource reference: pkg/dal/table/config_item.go
message ConfigItem {
    uint32 id                       = 1;
    ConfigItemSpec spec             = 2;
    ConfigItemAttachment attachment = 3;
    pbbase.Revision revision        = 4;
}

// ConfigItemSpec source resource reference: pkg/dal/table/config_item.go
message ConfigItemSpec {
    string name               = 1;
    string path               = 2;
    string file_type          = 3;  // file_type is enum type
    string file_mode          = 4;  // file_mode is enum type
    string memo               = 5;
    FilePermission permission = 6;
}

// ConfigItemAttachment source resource reference: pkg/dal/table/config_item.go
message ConfigItemAttachment {
    uint32 biz_id = 1;
    uint32 app_id = 2;
}

// FilePermission source resource reference: pkg/dal/table/config_item.go
message FilePermission {
    string user       = 1;
    string user_group = 2;
    string privilege  = 3;
}
